kubernetes/flask-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-admin
  labels:
    app: flask-admin
    name: flask-admin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-admin
    spec:
      containers:
        - name: flask-admin
          image: argaghulamahmad/flask-kubernetes-admin:latest
      restartPolicy: Always
  selector:
    matchLabels:
      app: flask-admin
