kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    app: flask
    name: flask
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: argaghulamahmad/flask-kubernetes:latest
      restartPolicy: Always
  selector:
    matchLabels:
      app: flask
