kubernetes/flask-admin.service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-admin
  labels:
    app: flask-admin
    service: flask-admin
spec:
  selector:
    app: flask-admin
  ports:
    - port: 5000
      targetPort: 5000
