kubernetes/vue-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-admin
  labels:
    app: vue-admin
    service: vue-admin
spec:
  selector:
    app: vue-admin
  ports:
    - port: 8081
      targetPort: 8080
