kubernetes/vue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue
  labels:
    app: vue
    service: vue
spec:
  selector:
    app: vue
  ports:
    - port: 8080
      targetPort: 8080
