kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
    - host: books.id
      http:
        paths:
          - path: /
            backend:
              serviceName: vue
              servicePort: 8080
          - path: /books
            backend:
              serviceName: flask
              servicePort: 5000
    - host: admin.books.id
      http:
        paths:
          - path: /
            backend:
              serviceName: vue-admin
              servicePort: 8080
          - path: /books
            backend:
              serviceName: flask-admin
              servicePort: 5000
